[gd_scene load_steps=17 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/StatusEffectsPanel/StatusEffectsPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/PlayerPanel.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Titillium-Regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/LabeledProgressBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/CustomViewportControl.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Stage3D/Stage3D.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Fonts/SourceCodePro/SourceCodePro-Regular.otf"

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )
fallback/0 = SubResource( 9 )

[sub_resource type="Gradient" id=5]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[sub_resource type="Gradient" id=3]
resource_local_to_scene = true
colors = PoolColorArray( 0.545098, 0.172549, 0.313726, 1, 0.352941, 0, 0.921569, 1 )

[sub_resource type="Gradient" id=4]
resource_local_to_scene = true
colors = PoolColorArray( 0.270588, 0.172549, 0.545098, 1, 0.678431, 0, 0.870588, 1 )

[sub_resource type="Gradient" id=6]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Environment" id=8]

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("ViewportWrapper/MarginContainer/Viewport")

[node name="PlayerPanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Player name"
clip_text = true

[node name="LevelBar" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 54.0
colorGradient = SubResource( 5 )
propertyName = "Level"

[node name="PainBar" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 1280.0
margin_bottom = 80.0
colorGradient = SubResource( 3 )
propertyName = "Pain"

[node name="LustBar" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 1280.0
margin_bottom = 106.0
colorGradient = SubResource( 4 )
propertyName = "Lust"

[node name="StaminaBar" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 1280.0
margin_bottom = 132.0
colorGradient = SubResource( 6 )
propertyName = "Stamina"

[node name="CreditsLabel" type="Label" parent="."]
margin_top = 136.0
margin_right = 1280.0
margin_bottom = 156.0
text = "Credits"

[node name="ViewportWrapper" type="Panel" parent="."]
margin_top = 160.0
margin_right = 1280.0
margin_bottom = 632.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="ViewportWrapper"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="Viewport" type="Viewport" parent="ViewportWrapper/MarginContainer"]
size = Vector2( 240, 270 )
hdr = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="Stage3D" parent="ViewportWrapper/MarginContainer/Viewport" instance=ExtResource( 9 )]

[node name="Camera" type="Camera" parent="ViewportWrapper/MarginContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.141, 50 )
environment = SubResource( 8 )
projection = 1
current = true
size = 10.0

[node name="CustomViewportControl" parent="ViewportWrapper/MarginContainer" instance=ExtResource( 8 )]
show_behind_parent = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 2.0
margin_right = 1278.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 7 )
viewportPath = NodePath("../Viewport")

[node name="StatusEffectsLabel" type="Label" parent="."]
margin_top = 636.0
margin_right = 1280.0
margin_bottom = 656.0
text = "Status Effects"

[node name="FlexGridContainer" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 660.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 60 )

[connection signal="gui_input" from="ViewportWrapper" to="." method="_on_ViewportWrapper_gui_input"]
[connection signal="mouse_entered" from="ViewportWrapper/MarginContainer/CustomViewportControl" to="." method="_on_ViewportContainer_mouse_entered"]
[connection signal="mouse_exited" from="ViewportWrapper/MarginContainer/CustomViewportControl" to="." method="_on_ViewportContainer_mouse_exited"]
